[package]
name = "brainwires-brain"
description = "Central knowledge crate — BKS, PKS, entity graph, thoughts, and fact extraction for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-brain"
keywords = ["knowledge-graph", "entity-extraction", "memory", "persistent-knowledge", "ai-brain"]
categories = ["development-tools"]

[lib]
name = "brainwires_brain"
path = "src/lib.rs"

[dependencies]
# Internal crates
brainwires-core.workspace = true
brainwires-storage = { workspace = true }

# Core
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio = { version = "1.43", features = ["sync", "time"] }
regex.workspace = true

# Arrow (for LanceDB record batch construction)
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true

# LanceDB
lancedb.workspace = true

# Dirs for default paths
dirs = "6"

# Schema generation (for MCP server types)
schemars.workspace = true

# Knowledge module deps (from brainwires-prompting)
rusqlite.workspace = true
reqwest.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true
tracing-subscriber.workspace = true
