[package]
name = "brainwires-bridge-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MCP bridge client for spawning and communicating with brainwires MCP server processes"

[dependencies]
tokio = { workspace = true, features = ["process", "io-util", "time", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
brainwires-mcp = { workspace = true }
