[package]
name = "brainwires-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MCP server framework for Brainwires - transport, middleware, and tool dispatch"

[dependencies]
tokio = { workspace = true, features = ["io-std", "io-util", "sync", "time", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
brainwires-mcp = { workspace = true }
