[package]
name = "brainwires-channels"
description = "Universal messaging channel contract for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-channels"
keywords = ["messaging", "channels", "discord", "telegram", "slack"]
categories = ["network-programming"]

[lib]
name = "brainwires_channels"

[dependencies]
# Agent network (optional — only needed for MessageEnvelope conversion)
brainwires-network = { workspace = true, optional = true }

# WebRTC — Brainwires forks with JitterBuffer, GCC, DTLS restart, serde config, TURN, TCP ICE, mDNS
# Both `webrtc` and the sub-crates (`rtc`, `rtc-interceptor`, `rtc-ice`) come from the same
# webrtc-rs monorepo so Cargo deduplicates the inner `rtc` path-dep and avoids type conflicts.
webrtc          = { git = "https://github.com/Brainwires/webrtc-rs",  branch = "master", optional = true }
rtc             = { git = "https://github.com/Brainwires/webrtc-rs",  branch = "master", package = "rtc",             optional = true }
rtc-interceptor = { git = "https://github.com/Brainwires/webrtc-rs",  branch = "master", package = "rtc-interceptor", optional = true }
rtc-ice         = { git = "https://github.com/Brainwires/webrtc-rs",  branch = "master", package = "rtc-ice",         optional = true }
bytes           = { workspace = true, optional = true }
rand            = { workspace = true, optional = true }
tokio           = { workspace = true, optional = true }
tracing         = { workspace = true, optional = true }

# Async runtime
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Identifiers & time
uuid = { workspace = true }
chrono = { workspace = true }

# Schema generation
schemars = { workspace = true, features = ["uuid1", "chrono04"] }

# Capability flags
bitflags = { workspace = true }

[features]
default = []
agent-network = ["dep:brainwires-network"]
webrtc = ["dep:webrtc", "dep:rtc", "dep:bytes", "dep:rand", "dep:tokio", "dep:tracing"]
webrtc-advanced = ["webrtc", "dep:rtc-interceptor", "dep:rtc-ice"]

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
