[package]
name = "brainwires-chat"
description = "Chat provider implementations for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
brainwires-core = { workspace = true }
brainwires-providers = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }

# HTTP providers (native feature)
async-stream = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["native"]
native = [
    "dep:async-stream", "dep:tracing", "dep:tokio",
    "brainwires-providers/native",
]
llama-cpp-2 = ["brainwires-providers/llama-cpp-2"]

[dev-dependencies]
serde_json = { workspace = true }
