[package]
name = "brainwires-core"
description = "Core types, traits, and error handling for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Needed for Provider trait (lightweight, always available)
async-trait = { workspace = true }
futures = { workspace = true }

# Optional dependencies
glob = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["native"]
native = ["dep:glob", "dep:reqwest", "dep:tracing", "dep:async-stream", "dep:dirs", "dep:tokio"]
local-llm = ["dep:tracing", "dep:dirs", "dep:tokio"]
wasm = ["chrono/wasmbind"]

[dev-dependencies]
serde_json = { workspace = true }
