[package]
name = "brainwires-core"
description = "Core types, traits, and error handling for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Needed for Provider trait (lightweight, always available)
async-trait = { workspace = true }
futures = { workspace = true }

# Plan parsing
regex = { workspace = true, optional = true }

[features]
default = ["native"]
native = ["planning"]
planning = ["dep:regex"]
wasm = ["chrono/wasmbind"]

[dev-dependencies]
serde_json = { workspace = true }
