[package]
name = "brainwires-core"
description = "Core types, traits, and error handling for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-core"
keywords = ["ai-agents", "llm", "framework", "traits", "multi-agent"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Needed for Provider trait (lightweight, always available)
async-trait = { workspace = true }
futures = { workspace = true }

# Plan parsing
regex = { workspace = true, optional = true }

# Schema generation (optional, for types shared with MCP tooling)
schemars = { workspace = true, optional = true }

[features]
default = ["native"]
native = ["planning"]
planning = ["dep:regex"]
schemars = ["dep:schemars"]
wasm = ["chrono/wasmbind"]

[dev-dependencies]
serde_json = { workspace = true }
