[package]
name = "brainwires-extras"
description = "Small utilities and example MCP servers for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[[example]]
name = "reload_daemon"
path = "examples/reload_daemon/main.rs"

[dev-dependencies]
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server", "macros"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
schemars = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
