[package]
name = "brainwires-finetune-local"
description = "Local PEFT fine-tuning (LoRA / QLoRA / DoRA) for the Brainwires Agent Framework — Burn-backed (CPU/WGPU) with safetensors checkpointing. Heavyweight; consumers that only want cloud fine-tune APIs should depend on `brainwires-finetune` directly."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
documentation = "https://docs.rs/brainwires-finetune-local"
keywords = ["lora", "qlora", "dora", "burn", "fine-tuning"]
categories = ["artificial-intelligence"]

[lib]
name = "brainwires_finetune_local"
path = "src/lib.rs"

[dependencies]
brainwires-core = { workspace = true }
brainwires-finetune = { path = "../brainwires-finetune", version = "0.10.0", default-features = false }

# Always-on infrastructure (paired with brainwires-finetune's own surface)
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Burn ML framework — individual crates to avoid the cubecl-cpu links conflict
# (lzma vs xz2 from datafusion/lancedb).
tokio = { workspace = true, features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
burn-core = { workspace = true }
burn-nn = { workspace = true }
burn-optim = { workspace = true }
burn-autodiff = { workspace = true }
burn-wgpu = { workspace = true }
burn-ndarray = { workspace = true }
tokenizers = { workspace = true }
safetensors = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[example]]
name = "local_training"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
