[package]
name = "brainwires-finetune"
description = "Cloud fine-tune APIs (OpenAI, Anthropic, Together, Fireworks, Anyscale, Bedrock, Vertex AI) + dataset pipelines for the Brainwires Agent Framework. Local LoRA/QLoRA/DoRA fine-tuning lives in `brainwires-finetune-local`. Training-from-scratch belongs in `brainwires-training`."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-finetune"
keywords = ["fine-tuning", "llm-training", "lora", "qlora", "model-training"]
categories = ["artificial-intelligence"]

[dependencies]
# Always available
brainwires-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# ── Datasets deps (absorbed from brainwires-datasets) ─────────────────────
sha2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tiktoken-rs = { workspace = true, optional = true }

# Cloud feature
reqwest = { version = "0.12", features = ["json", "stream", "multipart"], optional = true }
tokio = { workspace = true, optional = true }
brainwires-providers = { workspace = true, optional = true }

# Local feature — individual burn crates to avoid cubecl-cpu links conflict
burn-core = { workspace = true, optional = true }
burn-nn = { workspace = true, optional = true }
burn-optim = { workspace = true, optional = true }
burn-autodiff = { workspace = true, optional = true }
burn-wgpu = { workspace = true, optional = true }
burn-ndarray = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }

# Bedrock feature
aws-sigv4 = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, optional = true }
http = { workspace = true, optional = true }

# Vertex feature
gcp_auth = { workspace = true, optional = true }

[features]
default = ["cloud"]
cloud = ["dep:reqwest", "dep:tokio", "dep:brainwires-providers"]
local = [
    "dep:tokio",
    "dep:burn-core", "dep:burn-nn", "dep:burn-optim",
    "dep:burn-autodiff", "dep:burn-wgpu", "dep:burn-ndarray",
    "dep:tokenizers", "dep:safetensors",
]
bedrock = ["cloud", "dep:aws-sigv4", "dep:aws-credential-types", "dep:aws-smithy-runtime-api", "dep:http"]
vertex = ["cloud", "dep:gcp_auth"]
full = ["cloud", "local", "bedrock", "vertex", "datasets-full"]
# Datasets sub-features
datasets-hf-tokenizer = ["dep:tokenizers"]
datasets-tiktoken = ["dep:tiktoken-rs"]
datasets-dedup = ["dep:sha2", "dep:rand"]
datasets-full = ["datasets-hf-tokenizer", "datasets-tiktoken", "datasets-dedup"]

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[example]]
name = "cloud_finetune"
required-features = ["cloud"]

# `local_training` example lives in brainwires-finetune-local.

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
