[package]
name = "brainwires-hardware"
description = "Hardware I/O for the Brainwires Agent Framework — audio, GPIO, Bluetooth, and network"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-hardware"
keywords = ["hardware", "audio", "gpio", "bluetooth", "network"]
categories = ["hardware-support", "multimedia::audio"]

[dependencies]
# Always available
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Audio format (pure Rust, lightweight — always available)
hound = "3.5"

# Audio hardware I/O (audio feature)
cpal = { version = "0.15", optional = true }
tokio-stream = { workspace = true, optional = true }

# Provider API clients (audio feature)
brainwires-providers = { workspace = true, optional = true }

# Base64 decoding (needed for Google TTS response)
base64 = { workspace = true, optional = true }

# Streaming support (audio feature)
async-stream = { workspace = true, optional = true }

# FLAC encode/decode (pure Rust)
flacenc = { version = "0.5", optional = true }
claxon = { version = "0.4", optional = true }

# Local STT (optional heavy dep)
whisper-rs = { version = "0.15", optional = true }

# GPIO (Linux-only)
gpio-cdev = { version = "0.6", optional = true }
sysfs_gpio = { version = "0.6", optional = true }

# Bluetooth (cross-platform BLE via btleplug)
btleplug = { version = "0.11", optional = true }
uuid = { workspace = true, optional = true }

# Network hardware
network-interface = { version = "2", optional = true }
ipnetwork = { version = "0.21", optional = true, features = ["serde"] }
pnet = { version = "0.35", optional = true }
pnet_datalink = { version = "0.35", optional = true }

# Camera capture (cross-platform: V4L2 / AVFoundation / Media Foundation)
nokhwa = { version = "0.10", optional = true, features = ["input-native"] }
# Frame encode/decode: MJPEG → RGB, save PNG/JPEG (gated on camera feature)
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }

# Raw USB device access (pure Rust, no libusb system dependency)
nusb = { version = "0.1", optional = true }

[features]
default = []

# Audio: full hardware + cloud provider integrations
audio = [
    "dep:cpal",
    "dep:tokio-stream",
    "dep:brainwires-providers",
    "dep:async-stream",
    "dep:base64",
    "flac",
]
# FLAC codec (also pulled in by audio)
flac = ["dep:flacenc", "dep:claxon"]
# Local Whisper STT (heavy, opt-in)
local-stt = ["dep:whisper-rs"]

# GPIO hardware control (Linux)
gpio = ["dep:gpio-cdev", "dep:sysfs_gpio"]

# Bluetooth discovery and scanning
bluetooth = ["dep:btleplug", "dep:uuid"]

# Network interface enumeration, discovery, port scanning
network = ["dep:network-interface", "dep:ipnetwork", "dep:pnet", "dep:pnet_datalink"]

# Camera / webcam capture via nokhwa (cross-platform)
camera = ["dep:nokhwa", "dep:image"]

# Raw USB device access and transfers via nusb
usb = ["dep:nusb"]

# Convenience: everything
full = ["audio", "gpio", "bluetooth", "network", "camera", "usb"]

[dev-dependencies]
tokio = { workspace = true }

[[example]]
name = "speech_to_text"
required-features = ["audio"]

[[example]]
name = "text_to_speech"
required-features = ["audio"]


[[example]]
name = "bluetooth_scan"
required-features = ["bluetooth"]

[[example]]
name = "network_interfaces"
required-features = ["network"]

[[example]]
name = "port_scan"
required-features = ["network"]

[[example]]
name = "host_discovery"
required-features = ["network"]

